# learn-neural-network

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: core.cmake
core/Application/: Application.cpp  Application.hpp
core/Canvas/: Canvas.cpp  Canvas.hpp
core/Circle/: Circle.cpp
core/Connection/: Connection.cpp  Connection.hpp
core/Helper/: Helper.cpp  Helper.hpp
core/Layer/: Layer.cpp  Layer.hpp
core/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.hpp
core/Neuron/: Neuron.cpp  Neuron.hpp
core/Pixel/: Pixel.cpp  Pixel.hpp
core/Primitives/: primitives.cmake
core/Primitives/Circle/: Circle.cpp  Circle.hpp
core/Primitives/Line/: Line.cpp  Line.hpp
core/Primitives/Pixel/: Pixel.cpp  Pixel.hpp
vendors/: raylib-cpp.cmake  raylib.cmake
